# manage_project

./: .gitignore  db.sqlite3  pyproject.toml
jira/: admin.py  forms.py  models.py  urls.py  views.py
jira/migrations/: 0001_initial.py  0002_project_created_at.py  0003_alter_project_created_at.py  0004_alter_project_created_at.py  0005_alter_project_created_at.py  0006_alter_project_created_at.py  0007_project_author_alter_project_created_at.py  0008_status_notes.py  0009_task.py  0010_task_project_id.py  0011_remove_task_updated_at_alter_task_created_at_and_more.py  0012_task_updated_at.py  0013_comments.py  0014_alter_comments_receiver.py  0015_delete_comments.py
jira/templates/jira/: base.html  index.html
jira/templates/jira/project/: add_project.html  find_project.html  members.html  project.html
jira/templates/jira/task/: detail.html  task.html  user_task.html
jira/templates/registration/: login.html  sign_up.html
mysite/: settings.py  urls.py
