[tool.poetry]
name = "manage-project"
version = "0.1.0"
description = ""
authors = ["Mukagali <mukgaly.omirzak2003@gmail.com>"]
readme = "README.md"
packages = [{include = "manage_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
